--- a/templates/base.html
+++ b/templates/base.html
@@ -4,7 +4,6 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="{{ url_for('static', filename='img/favicon.ico') }}" type="image/x-icon">
     <title>{% block title %}CVQ - CV's Qualification{% endblock %}</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
@@ -172,11 +171,6 @@
             margin-bottom: 1rem;
         }
         
-        .logo-large {
-            max-width: 150px;
-            margin-bottom: 1.5rem;
-        }
-        
         @media (max-width: 768px) {
             .card {
                 margin-bottom: 1rem;
@@ -197,8 +191,7 @@
     <nav class="navbar navbar-expand-lg navbar-dark">
         <div class="container">
             <a class="navbar-brand" href="{{ url_for('index') }}">
-                <img src="{{ url_for('static', filename='img/cvq_logo.svg') }}" alt="CVQ Logo" height="40" class="me-2">
-                CVQ - CV's Qualification
+                <i class="fas fa-file-contract me-2"></i>CVQ - CV's Qualification
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                 <span class="navbar-toggler-icon"></span>
