UI final version

--- a/templates/index.html
+++ b/templates/index.html
@@ -6,8 +6,7 @@
 {% block content %}
 <div class="row">
     <div class="col-md-12 text-center mb-4">
-        <img src="{{ url_for('static', filename='img/cvq_logo.svg') }}" alt="CVQ Logo" class="logo-large">
-        <h1 class="display-4">Bienvenido a CVQ - CV's Qualification</h1>
+        <h1 class="display-4"><strong>Bienvenido a CVQ - CV's Qualification</strong></h1>
         <p class="lead">Sistema inteligente para analizar la compatibilidad entre currículums y ofertas de trabajo</p>
     </div>
 </div>
