--- a/templates/base.html
+++ b/templates/base.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <style>
         :root {
-            --primary-color: #4a6fdc;
+            --primary-color: #80d5cf;
             --secondary-color: #6c757d;
             --success-color: #28a745;
             --danger-color: #dc3545;
@@ -78,8 +78,13 @@
         }
         
         .btn-primary:hover {
-            background-color: #3a5fc8;
-            border-color: #3a5fc8;
+            background-color: #6fbeb8;
+            border-color: #6fbeb8;
+        }
+
+        .btn-primary:active {
+            background-color: #5ea9a3; /* más oscuro que el hover, por ejemplo */
+            border-color: #5ea9a3;
         }
         
         .footer {
@@ -191,7 +196,7 @@
     <nav class="navbar navbar-expand-lg navbar-dark">
         <div class="container">
             <a class="navbar-brand" href="{{ url_for('index') }}">
-                <img src="{{ url_for('static', filename='img/CVQ_logo_white.png') }}" alt="CVQ Logo" height="30" class="me-2">CVQ - CV's Qualification
+                <img src="{{ url_for('static', filename='img/CVQ_logo_white.png') }}" alt="CVQ Logo" class="logo-large" style="height: 40px;">
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                 <span class="navbar-toggler-icon"></span>
